--- a/package.json
+++ b/package.json
@@ -4,5 +4,20 @@
   "description": "Web Application for Picsou project",
   "author": "Paul-Guillaume Déjardin <pgdejardin@xebia.fr>",
   "license": "MIT",
-  "private": true
+  "private": true,
+  "dependencies": {
+    "koa": "2.5.0",
+    "koa-router": "7.4.0",
+    "koa-static": "4.0.2"
+  },
+  "devDependencies": {
+    "@types/koa": "^2.0.44",
+    "@types/node": "^9.4.6",
+    "nodemon": "^1.15.1",
+    "nps": "^5.7.1",
+    "ts-node": "^5.0.0",
+    "tslint": "^5.9.1",
+    "tslint-config-airbnb": "^5.7.0",
+    "typescript": "^2.7.2"
+  }
 }
