--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
+    "@koa/cors": "^2.2.1",
     "config": "1.29.4",
     "koa": "2.5.0",
     "koa-morgan": "1.0.1",
@@ -15,7 +16,10 @@
   },
   "devDependencies": {
     "@types/koa": "^2.0.44",
+    "@types/koa-bodyparser": "^4.2.0",
+    "@types/koa-router": "^7.0.27",
     "@types/node": "^9.4.6",
+    "koa-bodyparser": "^4.2.0",
     "nodemon": "^1.15.1",
     "nps": "^5.7.1",
     "ts-node": "^5.0.0",
