--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,24 +1,12 @@
 {
   "compilerOptions": {
     "module": "commonjs",
-    "target": "es2015",
-    "lib": [
-      "es2016",
-      "es2017",
-      "esnext.asynciterable"
-    ],
-    "outDir": "build",
     "declaration": false,
     "noImplicitAny": false,
-    "inlineSourceMap": true,
+    "sourceMap": true,
     "removeComments": true,
-    "strictNullChecks": true,
-    "typeRoots" : ["types", "node_modules/@types"]
+    "strictNullChecks": true
   },
-  "include": [
-    "src/**/*",
-    "types/**/*"
-  ],
   "exclude": [
     "node_modules"
   ]
