--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
     "koa": "2.5.0",
     "koa-morgan": "1.0.1",
     "koa-router": "7.4.0",
-    "koa-send": "^4.1.3",
-    "koa-static": "^4.0.2",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
-    "whatwg-fetch": "^2.0.3",
+    "koa-send": "4.1.3",
+    "koa-static": "4.0.2",
+    "react": "16.2.0",
+    "react-dom": "16.2.0",
+    "react-hot-loader": "4.0.0",
+    "whatwg-fetch": "2.0.3",
     "winston": "2.4.0"
   },
   "devDependencies": {
@@ -25,11 +26,11 @@
     "@types/node": "^9.4.6",
     "@types/react": "^16.0.38",
     "@types/react-dom": "^16.0.4",
-    "extract-text-webpack-plugin": "^3.0.2",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "webpack-contrib/html-webpack-plugin",
     "koa-bodyparser": "^4.2.0",
-    "koa-webpack": "^2.0.3",
+    "koa2-connect": "^1.0.2",
     "nodemon": "^1.15.1",
     "nps": "^5.7.1",
     "ts-loader": "^4.0.0",
@@ -39,7 +40,9 @@
     "typescript": "^2.7.2",
     "uglifyjs-webpack-plugin": "^1.2.2",
     "webpack": "^4.0.0",
-    "webpack-cli": "^2.0.9"
+    "webpack-cli": "^2.0.9",
+    "webpack-dev-middleware": "^2.0.6",
+    "webpack-hot-middleware": "^2.21.0"
   },
   "scripts": {
     "prebuild": "rm -rf build",
@@ -47,6 +50,7 @@
     "build:front": "NODE_ENV=production webpack --config internals/webpack.prod.config.js",
     "build": "NODE_ENV=production yarn run build:server && yarn run build:front",
     "start": "NODE_ENV=development nodemon --exec ts-node server/index.ts",
-    "start:prod": "NODE_ENV=production node build/server/index.js"
+    "start:prod": "NODE_ENV=production node build/server/index.js",
+    "start:production": "yarn run build && yarn run start:prod"
   }
 }
