--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "koa-router": "7.4.0",
     "koa-send": "4.1.3",
     "koa-static": "4.0.2",
+    "material-ui": "1.0.0-beta.35",
+    "material-ui-icons": "^1.0.0-beta.35",
     "react": "16.2.0",
     "react-dom": "16.2.0",
     "react-hot-loader": "4.0.0",
+    "styled-components": "3.1.6",
     "whatwg-fetch": "2.0.3",
     "winston": "2.4.0"
   },
@@ -27,8 +30,10 @@
     "@types/react": "^16.0.38",
     "@types/react-dom": "^16.0.4",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "file-loader": "^1.1.10",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "webpack-contrib/html-webpack-plugin",
+    "image-webpack-loader": "^4.1.0",
     "koa-bodyparser": "^4.2.0",
     "koa2-connect": "^1.0.2",
     "nodemon": "^1.15.1",
