--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "koa-send": "4.1.3",
     "koa-static": "4.0.2",
     "material-ui": "1.0.0-beta.35",
-    "material-ui-icons": "^1.0.0-beta.35",
+    "material-ui-icons": "1.0.0-beta.35",
     "react": "16.2.0",
     "react-dom": "16.2.0",
     "react-hot-loader": "4.0.0",
