Tried AT-LOADER + webpack 3.11.0 = nothing new for chunks... only one file...

--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
-  "name": "picsou-web",
+  "name": "koa-react-ts-boilerplate",
   "version": "1.0.0",
-  "description": "Web Application for Picsou project",
+  "description": "Boilerplate with Koa and React in Typescript",
   "author": "Paul-Guillaume Déjardin <pgdejardin@xebia.fr>",
   "license": "MIT",
-  "private": true,
   "dependencies": {
     "@koa/cors": "2.2.1",
     "config": "1.29.4",
@@ -18,6 +17,7 @@
     "react": "16.2.0",
     "react-dom": "16.2.0",
     "react-hot-loader": "4.0.0",
+    "react-loadable": "5.3.1",
     "styled-components": "3.1.6",
     "whatwg-fetch": "2.0.3",
     "winston": "2.4.0"
@@ -29,30 +29,37 @@
     "@types/node": "^9.4.6",
     "@types/react": "^16.0.38",
     "@types/react-dom": "^16.0.4",
-    "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "awesome-typescript-loader": "^3.5.0",
+    "babel-core": "^6.26.0",
+    "babel-plugin-transform-react-constant-elements": "^6.23.0",
+    "babel-plugin-transform-react-inline-elements": "^6.22.0",
+    "babel-plugin-transform-react-remove-prop-types": "^0.4.13",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "extract-text-webpack-plugin": "3.0.2",
     "file-loader": "^1.1.10",
     "html-loader": "^0.5.5",
-    "html-webpack-plugin": "webpack-contrib/html-webpack-plugin",
+    "html-webpack-plugin": "^2.29.0",
     "image-webpack-loader": "^4.1.0",
     "koa-bodyparser": "^4.2.0",
     "koa2-connect": "^1.0.2",
     "nodemon": "^1.15.1",
     "nps": "^5.7.1",
-    "ts-loader": "^4.0.0",
+    "ts-loader": "^3.5.0",
     "ts-node": "^5.0.0",
     "tslint": "^5.9.1",
     "tslint-config-airbnb": "^5.7.0",
     "typescript": "^2.7.2",
     "uglifyjs-webpack-plugin": "^1.2.2",
-    "webpack": "^4.0.0",
-    "webpack-cli": "^2.0.9",
+    "webpack": "^3.11.0",
     "webpack-dev-middleware": "^2.0.6",
     "webpack-hot-middleware": "^2.21.0"
   },
   "scripts": {
     "prebuild": "rm -rf build",
     "build:server": "tsc -p ./tsconfig.server.json",
-    "build:front": "NODE_ENV=production webpack --config internals/webpack.prod.config.js",
+    "build:front": "NODE_ENV=production webpack --config internals/webpack.prod.config.js --color -p --progress",
     "build": "NODE_ENV=production yarn run build:server && yarn run build:front",
     "start": "NODE_ENV=development nodemon --exec ts-node server/index.ts",
     "start:prod": "NODE_ENV=production node build/server/index.js",
