--- a/package.json
+++ b/package.json
@@ -9,15 +9,19 @@
     "@koa/cors": "2.2.1",
     "config": "1.29.4",
     "koa": "2.5.0",
+    "koa-bodyparser": "4.2.0",
     "koa-morgan": "1.0.1",
     "koa-router": "7.4.0",
     "koa-send": "4.1.3",
     "koa-static": "4.0.2",
+    "koa2-connect": "1.0.2",
     "material-ui": "1.0.0-beta.35",
     "material-ui-icons": "1.0.0-beta.35",
+    "prop-types": "^15.6.1",
     "react": "16.2.0",
     "react-dom": "16.2.0",
     "react-hot-loader": "4.0.0",
+    "react-loadable": "5.3.1",
     "styled-components": "3.1.6",
     "whatwg-fetch": "2.0.3",
     "winston": "2.4.0"
@@ -27,32 +31,35 @@
     "@types/koa-bodyparser": "^4.2.0",
     "@types/koa-router": "^7.0.27",
     "@types/node": "^9.4.6",
-    "@types/react": "^16.0.38",
-    "@types/react-dom": "^16.0.4",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.4",
+    "babel-plugin-transform-react-constant-elements": "^6.23.0",
+    "babel-plugin-transform-react-inline-elements": "^6.22.0",
+    "babel-plugin-transform-react-remove-prop-types": "^0.4.13",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^1.1.10",
     "html-loader": "^0.5.5",
-    "html-webpack-plugin": "webpack-contrib/html-webpack-plugin",
+    "html-webpack-plugin": "^3.0.5",
     "image-webpack-loader": "^4.1.0",
-    "koa-bodyparser": "^4.2.0",
-    "koa2-connect": "^1.0.2",
     "nodemon": "^1.15.1",
     "nps": "^5.7.1",
-    "ts-loader": "^4.0.0",
     "ts-node": "^5.0.0",
     "tslint": "^5.9.1",
     "tslint-config-airbnb": "^5.7.0",
     "typescript": "^2.7.2",
     "uglifyjs-webpack-plugin": "^1.2.2",
-    "webpack": "^4.0.0",
-    "webpack-cli": "^2.0.9",
-    "webpack-dev-middleware": "^2.0.6",
-    "webpack-hot-middleware": "^2.21.0"
+    "webpack": "^4.1.0",
+    "webpack-cli": "^2.0.10",
+    "webpack-dev-middleware": "^3.0.0",
+    "webpack-hot-middleware": "^2.21.2"
   },
   "scripts": {
     "prebuild": "rm -rf build",
-    "build:server": "tsc -p ./tsconfig.server.json",
-    "build:front": "NODE_ENV=production webpack --config internals/webpack.prod.config.js",
+    "build:server": "tsc",
+    "build:front": "NODE_ENV=production webpack --config internals/webpack.prod.config.js --color -p --progress --display-modules --display-max-modules 1000",
     "build": "NODE_ENV=production yarn run build:server && yarn run build:front",
     "start": "NODE_ENV=development nodemon --exec ts-node server/index.ts",
     "start:prod": "NODE_ENV=production node build/server/index.js",
