--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,18 +1,23 @@
 {
   "compilerOptions": {
     "module": "commonjs",
+    "target": "es2017",
     "declaration": false,
     "noImplicitAny": false,
-    "sourceMap": true,
+    "sourceMap": false,
     "removeComments": true,
     "strictNullChecks": true,
-    "jsx": "react",
+    "outDir": "build/server",
     "lib": [
-      "DOM",
-      "es2015"
-    ]
+      "es2017",
+      "esnext.asynciterable"
+    ],
+    "typeRoots": ["server/types", "node_modules/@types"]
   },
   "exclude": [
     "node_modules"
+  ],
+  "include": [
+    "server/**/*"
   ]
 }
