[Webpack] Add style and css loaders for pre-process third party css

--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "css-loader": "^0.28.10",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^1.1.10",
     "html-loader": "^0.5.5",
@@ -46,6 +47,7 @@
     "image-webpack-loader": "^4.1.0",
     "nodemon": "^1.15.1",
     "nps": "^5.7.1",
+    "style-loader": "^0.20.2",
     "ts-node": "^5.0.0",
     "tslint": "^5.9.1",
     "tslint-config-airbnb": "^5.7.0",
@@ -59,8 +61,8 @@
   "scripts": {
     "prebuild": "rm -rf build",
     "build:server": "tsc",
-    "build:front": "NODE_ENV=production webpack --config internals/webpack.prod.config.js --color -p --progress --display-modules --display-max-modules 1000",
-    "build": "NODE_ENV=production yarn run build:server && yarn run build:front",
+    "build:client": "NODE_ENV=production webpack --config internals/webpack.prod.config.js --color -p --progress",
+    "build": "NODE_ENV=production yarn run build:server && yarn run build:client",
     "start": "NODE_ENV=development nodemon --exec ts-node server/index.ts",
     "start:prod": "NODE_ENV=production node build/server/index.js",
     "start:production": "yarn run build && yarn run start:prod"
