--- a/package.json
+++ b/package.json
@@ -1,15 +1,17 @@
 {
-  "name": "picsou-web",
+  "name": "react-koa-boilerplate",
   "version": "1.0.0",
-  "description": "Web Application for Picsou project",
+  "description": "Boilerplate for React App served by a Koa server written in Typescript",
   "author": "Paul-Guillaume Déjardin <pgdejardin@xebia.fr>",
   "license": "MIT",
-  "private": true,
   "dependencies": {
     "@koa/cors": "2.2.1",
+    "chalk": "2.3.2",
     "config": "1.29.4",
+    "ip": "1.1.5",
     "koa": "2.5.0",
     "koa-bodyparser": "4.2.0",
+    "koa-compress": "2.0.0",
     "koa-morgan": "1.0.1",
     "koa-router": "7.4.0",
     "koa-send": "4.1.3",
@@ -17,7 +19,9 @@
     "koa2-connect": "1.0.2",
     "material-ui": "1.0.0-beta.35",
     "material-ui-icons": "1.0.0-beta.35",
-    "prop-types": "^15.6.1",
+    "minimist": "1.2.0",
+    "ngrok": "3.0.0",
+    "prop-types": "15.6.1",
     "react": "16.2.0",
     "react-dom": "16.2.0",
     "react-hot-loader": "4.0.0",
@@ -29,7 +33,10 @@
   "devDependencies": {
     "@types/koa": "^2.0.44",
     "@types/koa-bodyparser": "^4.2.0",
+    "@types/koa-compress": "^2.0.8",
     "@types/koa-router": "^7.0.27",
+    "@types/ip": "^0.0.30",
+    "@types/minimist": "^1.2.0",
     "@types/node": "^9.4.6",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.4",
